Remove schema reference tab

--- a/src/content/graphos/delivery/propose-changes.mdx
+++ b/src/content/graphos/delivery/propose-changes.mdx
@@ -35,6 +35,8 @@ You can create a new proposal in [GraphOS Studio](https://studio.apollographql.c
       className="screenshot"
       alt="Graphs page in Studio"
     />
+  
+  - [Coming soon] You can also access the proposals list page from the left navigation
 
 - A variant's schema SDL
   - To access a variant's SDL, click the variant from the **Graphs** page, select **Schema** from the left nav, and then select **SDL**.
