Add more screenshots

--- a/src/content/graphos/delivery/propose-changes.mdx
+++ b/src/content/graphos/delivery/propose-changes.mdx
@@ -95,6 +95,7 @@ You can directly edit one or more subgraph schemas on a proposal's **Editor** ta
 />
 
 To start a new subgraph, click **+Add new** from the subgraph schema selector in the left nav.
+You can also delete existing subgraphs and rename newly created ones by clicking the **•••** menu to the right of a subgraph's name.
 
 <img
   src="../img/schema-proposals/subgraph-schema-selector.jpg"
@@ -102,8 +103,6 @@ To start a new subgraph, click **+Add new** from the subgraph schema selector in
   alt="Schema proposals editor in Studio"
   width="200px"
 />
-
-You can also delete and rename existing subgraph schemas by clicking the **•••** menu to the right of a subgraph's name.
 
 ### Lint changes
 
