--- a/src/content/graphos/delivery/schema-proposals.mdx
+++ b/src/content/graphos/delivery/schema-proposals.mdx
@@ -74,7 +74,9 @@ Default status upon creation until the proposal is ready for review.
 
 </td>
 <td><a href="./propose-changes#change-proposal-status">Manual</a></td>
-<td>Signals the proposal is ready for review.</td>
+<td>Signals the proposal is ready for review.
+<br/><br/>
+- If <a href="./configure-proposals/#default-reviewers">default reviewers</a> are configured, they become assigned for review.</td>
 </tr>
 <tr>
 <td>
@@ -89,6 +91,8 @@ The{' '}
 minimum number of reviewers
 </a>{' '}
 has approved the proposal.
+<br/> <br/>
+- If you've <a href="./configure-proposals/#require-default-reviewer-approval">required default reviewer approval</a>, at least one approval must be from a <a href="./configure-proposals/#default-reviewers">default reviewer</a>.
 </td>
 </tr>
 <tr>
