--- a/src/content/graphos/delivery/propose-changes.mdx
+++ b/src/content/graphos/delivery/propose-changes.mdx
@@ -24,11 +24,9 @@ graph LR
 
 ## Start a proposal
 
-You can create a new proposal in [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content) from either:
+You can create a new proposal in [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content) from a graph's proposals list. To access the proposals list page, either:
 
-- A graph's proposals list
-
-  - To access the proposals list page, click the pencil icon with the tooltip that says **Go to schema change proposals**.
+  - Click the pencil icon with the tooltip that says **Go to schema change proposals**.
 
     <img
       src="../img/schema-proposals/proposals-list-page.jpg"
@@ -36,18 +34,9 @@ You can create a new proposal in [GraphOS Studio](https://studio.apollographql.c
       alt="Graphs page in Studio"
     />
   
-  - [Coming soon] You can also access the proposals list page from the left navigation
+  - [Coming soon] Open the proposals list page from the left navigation.
 
-- A variant's schema SDL
-  - To access a variant's SDL, click the variant from the **Graphs** page, select **Schema** from the left nav, and then select **SDL**.
-
-    <img
-      src="../img/schema-proposals/sdl-page.jpg"
-      className="screenshot"
-      alt="SDL page in Studio"
-    />
-
-From either location:
+Follow the steps below to create a new proposal:
 
 1. Click the **Propose changes** button in the top right. A modal entitled **Propose schema changes** appears.
    <img
@@ -60,17 +49,18 @@ From either location:
 
    <Note>
 
-   You cannot change a proposal's title once it's created.
+   If you want to edit the proposal's title later, you can do so from its [**Overview** tab](./review-proposals/#overview).
 
    </Note>
 
-3. Select a **source variant**. (This is only necessary if you've opened your proposal from the proposals list page.)
+3. Select a **source variant**. The source variant's schema is used to start the proposal, but the proposal is not kept in sync with any schema changes that occur while the proposal is in progress.
 
-   <Note>
+   <Tip>
 
-   The source variant's schema is used to start the proposal, but the proposal is not kept in sync with any schema changes that occur while the proposal is in progress.
+   Because development environments are where most changes and experimentation occur, **Apollo recommends creating schema proposals from development variants**.
+   Proposing schema changes from a development variant helps minimize the risks associated with making direct changes to a production schema and allows for the earliest detection of issues and potential improvements.
 
-   </Note>
+   </Tip>
 
 4. Optionally, enter the rationale for the proposed changes. This rationale appears as your proposal's README on the proposal overview and gives collaborators and reviewers context for the proposed changes. This field accepts [Markdown](https://www.markdownguide.org/getting-started/).
 
