--- a/src/content/graphos/delivery/review-proposals.mdx
+++ b/src/content/graphos/delivery/review-proposals.mdx
@@ -49,11 +49,14 @@ A proposal's **Changes** tab shows both a **Summary** and **Detailed view** of t
   src="../img/schema-proposals/changes.jpg"
   className="screenshot"
   alt="Schema proposals changes tab in Studio"
+  width="700"
 />
 
 - The **Summary** shows the number of objects, interfaces, and other types that were changed in the proposal. Each type shows the number of lines there were added, deleted, and modified.
 
 - The **Detailed view** shows a collapsible diff for each changed type.
+
+You can use the left nav to view changes from a particular subgraph, or see the changes in the context of the composed [supergraph schema](/federation/federated-types/overview/#supergraph-schema) or [resulting API schema](/federation/federated-types/overview/#api-schema).
 
 #### Add comments
 
