fix broken links, hide line numbers for non-code code blocks

--- a/src/content/graphos/basics/graphs/creating-a-subgraph.mdx
+++ b/src/content/graphos/basics/graphs/creating-a-subgraph.mdx
@@ -16,7 +16,7 @@ The fastest way to create a new subgraph is to start with one of the templates p
 
 You start by running `rover template use`, providing it the ID of your chosen template. For example, the following command creates a new directory called `my-subgraph` that contains the boilerplate code for a subgraph written in TypeScript using the Apollo Server library:
 
-```bash
+```bash showLineNumbers=false 
 rover template use "my-subgraph" --template="subgraph-typescript-apollo-server"
 ```
 
