--- a/src/content/graphos/basics/graphs/local-development.mdx
+++ b/src/content/graphos/basics/graphs/local-development.mdx
@@ -15,7 +15,7 @@ You run `rover dev` once for _each subgraph_ in your supergraph. The _first_ tim
 
 Try running `rover dev` with an example subgraph like so:
 
-```bash
+```bash showLineNumbers=false
 rover dev --url https://flyby-locations-sub.herokuapp.com/ --name locations
 ```
 
@@ -40,7 +40,7 @@ To add a subgraph to your local supergraph, run `rover dev` _again_ in a separat
 
 You can add a subgraph to this article's example supergraph with the following command:
 
-```bash
+```bash showLineNumbers=false
 rover dev --url https://flyby-reviews-sub.herokuapp.com/ --name reviews
 ```
 
