--- a/src/content/graphos/basics/graphs/updating.mdx
+++ b/src/content/graphos/basics/graphs/updating.mdx
@@ -98,7 +98,7 @@ If you host your own Apollo Router instance, you can use the [Rover CLI](/rover/
 
 If you _do_ perform composition with `rover supergraph compose`, the command uses the _exact_ version of composition you specify via the `federation_version` key in the YAML configuration file you pass:
 
-```bash
+```bash showLineNumbers=false
 rover supergraph compose --config ./supergraph.yaml
 ```
 
