--- a/src/content/graphos/basics/operations/persisted-queries.mdx
+++ b/src/content/graphos/basics/operations/persisted-queries.mdx
@@ -281,7 +281,7 @@ See the instructions for your client library:
 
 1. In your app's project, install the `@apollo/generate-persisted-query-manifest` package as a dev dependency:
 
-    ```bash
+    ```bash showLineNumbers=false
     npm install --save-dev @apollo/generate-persisted-query-manifest
     ```
 
@@ -289,7 +289,7 @@ See the instructions for your client library:
 
 2. Generate your first manifest with the following command:
 
-    ```bash
+    ```bash showLineNumbers=false
     npx generate-persisted-query-manifest
     ```
 
