--- a/src/content/graphos/explorer/sandbox.mdx
+++ b/src/content/graphos/explorer/sandbox.mdx
@@ -138,7 +138,7 @@ The following URL parameters are supported:
 
 For example, the following URL sets all supported parameters:
 
-```text title="Example URL"
+```text title="Example URL"  showLineNumbers=false
 https://studio.apollographql.com/sandbox/explorer?endpoint=http://localhost:4200&document=query hello($name: String!) { hello(name: $name)}&variables={"name": "Sandbox User"}&headers={"Cache-Control": "no-cache"}
 ```
 
