--- a/src/content/graphos/metrics/sending-operation-metrics.mdx
+++ b/src/content/graphos/metrics/sending-operation-metrics.mdx
@@ -33,7 +33,7 @@ Both the Apollo Router and Apollo Server use the same mechanism to enable operat
 
 3. Use the obtained values to set the following environment variables in your environment _before_ starting up your router/server:
 
-   ```bash
+   ```bash showLineNumbers=false
    export APOLLO_KEY=<YOUR_GRAPH_API_KEY>
    export APOLLO_GRAPH_REF=<YOUR_GRAPH_REF>
    ```
