--- a/src/content/shared/register-cli.mdx
+++ b/src/content/shared/register-cli.mdx
@@ -10,7 +10,7 @@
 
 3. Run the `rover graph publish` command, providing your schema in one of the ways shown:
 
-   ```bash
+   ```bash showLineNumbers=false
    # Provide a local .graphql file path
    rover graph publish my-graph@my-variant --schema ./schema.graphql
 
