--- a/src/content/shared/register-federated-cli.mdx
+++ b/src/content/shared/register-federated-cli.mdx
@@ -33,7 +33,7 @@ Then, **do the following for each of your subgraphs**:
 
 2. Run the `rover subgraph publish` command, providing your schema in one of the ways shown:
 
-   ```bash
+   ```bash showLineNumbers=false
    # Provide a local .graphql file path
    rover subgraph publish my-graph@my-variant --name products --routing-url http://products-graphql.svc.cluster.local:4001/ --schema ./schema.graphql
 
