--- a/src/content/technotes/TN0020-mocked-gateway-for-client-development.mdx
+++ b/src/content/technotes/TN0020-mocked-gateway-for-client-development.mdx
@@ -22,7 +22,7 @@ To use this sample, you need to [publish your schema to Apollo GraphOS](/graphos
 
 To get started with the sample, run the following:
 
-```bash
+```bash showLineNumbers=false
 git clone https://github.com/setchy/apollo-server-4-mocked-federation
 cd apollo-server-4-mocked-federation
 npm install
@@ -31,7 +31,7 @@ cp .env.template .env
 
 Then, edit the `.env` file with the appropriate values from GraphOS Studio and run the following to start the server:
 
-```bash
+```bash showLineNumbers=false
 npm run dev
 ```
 
