--- a/src/content/graphos/basics/operations/subscriptions.mdx
+++ b/src/content/graphos/basics/operations/subscriptions.mdx
@@ -221,7 +221,7 @@ After receiving this query result from the Reviews subgraph, our router combines
 
 To quickly try out HTTP-based subscriptions _without_ setting up an Apollo Client library, you can execute a `curl` command against your cloud router with the following format:
 
-```bash title="Example curl request"
+```bash title="Example curl request" showLineNumbers=false
  curl 'https://main--my-org-supergraph.apollographos.net/graphql' -v \
   -H 'accept: multipart/mixed; boundary="graphql"; subscriptionSpec=1.0, application/json' \
   -H 'content-type: application/json' \
@@ -230,7 +230,7 @@ To quickly try out HTTP-based subscriptions _without_ setting up an Apollo Clien
 
 This command creates an HTTP multipart request and keeps an open connection that receives new subscription data in multiple response parts:
 
-```
+```text showLineNumbers=false disableCopy=true
 --graphql
 content-type: application/json
 
