--- a/src/content/graphos/delivery/schema-checks.mdx
+++ b/src/content/graphos/delivery/schema-checks.mdx
@@ -65,7 +65,7 @@ If you have a [monograph](../graphs/#monographs) (which is not recommended), use
 
 The `rover subgraph check` command looks like this:
 
-```bash
+```bash showLineNumbers=false
 rover subgraph check docs-example-graph@main --name products --schema ./schema.graphql
 ```
 
@@ -77,7 +77,7 @@ It requires the following:
 
   - If your schema is _not_ in a standalone `.graphql` file, you can run your GraphQL server locally and pipe its schema directly from `rover graph introspect`, like so:
 
-    ```bash
+    ```bash showLineNumbers=false
     rover subgraph introspect http://localhost:4000 | rover subgraph check docs-example-graph@main --name products --schema -
     ```
 
