--- a/src/content/graphos/explorer/connecting-authenticating.mdx
+++ b/src/content/graphos/explorer/connecting-authenticating.mdx
@@ -16,7 +16,7 @@ It's common for public endpoints to set [CORS policies](https://developer.mozill
 
 To do so, include the following header(s) in your server's responses:
 
-```bash
+```bash showLineNumbers=false
 Access-Control-Allow-Origin: https://studio.apollographql.com
 
 # Include this only if your server *also* authenticates via cookies.
@@ -50,7 +50,7 @@ If your server uses cookies to authenticate, you can configure your endpoint to 
 
 To set this up, your [cookie's value must contain `SameSite=None; Secure`](https://www.chromium.org/updates/same-site). Additionally, the following CORS headers must be present in your server's response to Studio:
 
-```bash
+```bash showLineNumbers=false
 Access-Control-Allow-Origin: https://studio.apollographql.com
 Access-Control-Allow-Credentials: true
 ```
