--- a/src/content/graphos/metrics/operations.mdx
+++ b/src/content/graphos/metrics/operations.mdx
@@ -22,7 +22,7 @@ Once you've configured your graph to send [operation metrics to GraphOS](./sendi
 
 This page combines operation and field metrics and has two main sections:
 
-- The collapsible left sidebar, where you can [search, filter, and sort operations](#operation-metrics) and fields (refer to [Field usage](./fields-usage) for more information on field metrics)
+- The collapsible left sidebar, where you can [search, filter, and sort operations](#operation-metrics) and fields (refer to [Field usage](./field-usage) for more information on field metrics)
 - The main insights view, which displays an [**Operations Overview**](#operations-overview) and [operation metrics](#operation-metrics), like the [request rate](#request-rate)
 
 When you click an operation name from the left sidebar or overview, this view shows [detailed information](#operation-details) about the individual operation.
