Add Publication tip

--- a/src/content/graphos/delivery/publishing-schemas.mdx
+++ b/src/content/graphos/delivery/publishing-schemas.mdx
@@ -6,6 +6,12 @@ description: Publish your GraphQL schemas to Apollo GraphOS using the Rover CLI 
 
 Whenever you make changes to a graph's schema, you should **publish** those changes to Apollo GraphOS using **the Rover CLI**. Doing so ensures that Apollo always has an up-to-date understanding of your graph.
 
+<Tip>
+
+Incorporate [schema proposals](./schema-proposals) into [schema checks](./schema-checks) to ensure your organization only publishes preapproved changes. [Learn more.](./implement-proposals#ensure-changes-match-an-approved-proposal)
+
+</Tip>
+
 ## Prerequisites
 
 1. [Install the Rover CLI](/rover/getting-started/).
