Add schema proposals to Pipeline overview

--- a/src/content/graphos/delivery/index.mdx
+++ b/src/content/graphos/delivery/index.mdx
@@ -14,7 +14,8 @@ GraphOS provides schema pipeline tools to efficiently develop and deploy changes
 GraphOS provides the following schema governance tools:
 
 - [Schema checks](./schema-checks) help identify breaking changes before you make them and help determine when a potentially dangerous change is, in fact, safe.
-- [Schema linting](./schema-linter) ensures consistent, well-formed schemas across all your services. Automated linting lowers maintenance overheads and improves developer productivity. Schema linting can run as part of schema checks in GraphOS Studio and as one-offs via the Rover CLI.
+- [Schema linting](./schema-linter) ensures consistent, well-formed schemas across all your services. Automated linting lowers maintenance overheads and improves developer productivity. Schema linting can run as [part of schema checks](./schema-linter#linting-via-schema-checks) in GraphOS Studio and as [one-offs via the Rover CLI](./schema-linter#one-off-linting).
+- [Schema proposals](./schema-proposals) provide GraphOS-native schema change management. Team members propose changes which others review and approve. The centralized [proposal process](./schema-proposals#proposal-process) does more than just strengthen governance&mdash;it fosters cross-organization collaboration.
 
 ## Schema delivery
 
