--- a/src/content/graphos/delivery/publishing-schemas.mdx
+++ b/src/content/graphos/delivery/publishing-schemas.mdx
@@ -4,7 +4,9 @@ subtitle: Using the Rover CLI
 description: Publish your GraphQL schemas to Apollo GraphOS using the Rover CLI in your continuous delivery pipeline.
 ---
 
-Whenever you make changes to a graph's schema, you should **publish** those changes to Apollo GraphOS using **the Rover CLI**. Doing so ensures that Apollo always has an up-to-date understanding of your graph.
+Whenever you make changes to a graph's schema, you should **publish** those changes to Apollo GraphOS using the [Rover CLI](/rover) or the [Platform API](/graphos/platform-api/). Doing so ensures that Apollo always has an up-to-date understanding of your graph.
+
+This page covers how to publish different kinds of schemas using the Rover CLI. Refer to the [Platform API](/graphos/platform-api/) reference for which operations to use for publication.
 
 ## Prerequisites
 
