--- a/src/content/graphos/basics/quickstart/self-hosted.mdx
+++ b/src/content/graphos/basics/quickstart/self-hosted.mdx
@@ -424,7 +424,27 @@ Return to [GraphOS Studio](https://studio.apollographql.com?referrer=docs-conten
 
 Within a few minutes, the test queries you executed in the previous step should be represented on this page. The Insights page is vital to monitoring your supergraph's performance across all of your clients that query the router.
 
-Learn more about the available metrics in the [metrics documentation](../metrics).
+Learn more about the available metrics in the [metrics documentation](../metrics). Expand the summary table below to Learn more about the other variant pages in Studio.
+
+### Variant pages in Studio
+
+<ExpansionPanel title="Click to expand">
+
+| Page                            | Description                                                                                                                                                                                                                 |
+| ------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **README**                      | Displays the variant's editable Markdown-formatted README, along with other important details about the variant (such as its graph ref and router URL). [Learn more.](../graphs/studio-features/#the-readme-page)           |
+| **Schema**                      | Documentation for all your supergraph's types and fields. Supports filtering definitions by name, subgraph, and other values. [Learn more.](../graphs/studio-features/#the-schema-page)                                     |
+| **Explorer**                    | A powerful IDE for building and executing operations against your supergraph. [Learn more.](../explorer/)                                                                                                                   |
+| **Changelog**                   | Displays a historical diff of additions, modifications, and deletions made to your supergraph's schema.                                                                                                                     |
+| **Subgraphs**                   | Displays the details for each separate GraphQL API that's part of your supergraph. (Each API is called a **subgraph**.) [Learn more.](../routing/cloud/)                                                                    |
+| **Proposals** (Enterprise only) | Displays a graph's list of schema proposals. [Learn more.](../delivery/schema-proposals/)                                                                                                                                   |
+| **Clients**                     | Displays operation metrics for the variant, broken down by individual clients. This feature requires that clients identify themselves in their requests to your router. [Learn more.](../metrics/client-awareness)          |
+| **Insights**                    | Displays usage and performance metrics for the variant at the operation and field levels. This includes request and error rates. [Learn more.](../metrics/)                                                                 |
+| **Checks**                      | Displays the results of schema checks that have been run for the variant. [Learn more.](../delivery/schema-checks)                                                                                                          |
+| **Launches**                    | Displays the results of recent launches executed for your supergraph. A launch occurs whenever changes are made to one of your subgraph schemas, resulting in an update to your router. [Learn more.](../delivery/launches) |
+| **Settings**                    | Configuration options for the individual variant, along with high-level options for the entire supergraph.                                                                                                                  |
+
+</ExpansionPanel>
 
 ## 8. Deploy your router and connect clients
 
